# code-with-ai

./: .env.example  .gitignore  .lintstagedrc.yml  .shellcheckrc  PYTHON_INSTALL.md  PYTHON_SUMMARY.md  PYTHON_VALIDATION.md  README.md  Taskfile.yml  eslint.config.mjs  install.md  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml
.cwai/prompts/: breakdown.md  clarify.md  developer.md  implement.md  outline.md
.cwai/scripts/: common.md  common.ps1  common.sh  create-feature.md  create-feature.ps1  create-feature.sh  create-new-feature-script.sh  create-new-feature.sh  detect-feature.sh
.cwai/templates/: high-level-design.md  hld.md  low-level-design.md  product-requirements.md  prompt.md  raw-design.md  stack.md
.cwai/tests/: outline.md
.github/prompts/: design-game.prompt.md  design-hld.prompt.md  design-lld.prompt.md  design-llm-prompt.prompt.md  develop.prompt.md  developer.prompt.md  outline.prompt.md
.husky/: pre-commit
agents/architect/: generic.md  software.md
agents/dev/: bash.md  c-objective.md  elixir.md  generic.md  javascript.md  powershell.md  python.md  typescript.md  zig.md
agents/gaming-company-small/: 2d-3d-artist.md  game-designer.md  gameplay-programmer.md  lead-programmer.md  level-designer.md  writer.md
agents/llm-promt/: generic.md
agents/ui/: generic.md
apps/: .gitignore
company/gaming-small/: .prompt.md  README.md  gameplay-programmer.md  lead-programmer.md  producer.md  (+3 more)
infra/: .gitignore
scripts/: .gitignore
src/: install.md
tests/: __init__.py  outline.md  test_helpers.py  test_logger.py
(+53 files in other folders)
