[project]
name = "code-with-ai"
version = "1.0.0"
description = "Code with AI - CLI tools for AI-assisted development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.7",
    "rich>=13.7.0",
    "questionary>=2.0.1",
    "python-dotenv>=1.0.0",
]
authors = [{ name = "Code with AI Team" }]
license = { text = "ISC" }

[project.scripts]
cwai-install = "bin.py.cwai_install:main"
cwai-create-feature = "bin.py.cwai_create_feature:main"

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "black>=23.0.0", "ruff>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = []
